samples/_failures_safe/1761708579_7ffb71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09e4b766.c: In function ‘main’:
./samples/SAFE/__tmp_09e4b766.c:166:5: error: expected declaration or statement at end of input
  166 |     if (!tokens) {
      |     ^~
./samples/SAFE/__tmp_09e4b766.c:166:5: error: expected declaration or statement at end of input
